# Starlight-Engine-1.0

./: .gitignore  LICENSE  README.md
Genesis_Project_01/: CMakeLists.txt
Genesis_Project_01/assets/shaders/: basic.frag  basic.vert  black_hole.frag  cloth_update.comp  crt.frag  instanced_block_gbuffer.vert  mode7.frag  mode7.vert  pbr.frag  prefilter.frag  selection.frag  shadow.vert  ssao.wgsl  ui.vert  voxel_simple.frag  warp.frag  water.vert
Genesis_Project_01/src/: main.cpp
Quimera-Project-feature-initial-engine-research-and-skeleton-15858236916178612466/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  EXTRACTION_STRATEGY.md  REPORT.md  imgui.ini
Quimera-Project-feature-initial-engine-research-and-skeleton-15858236916178612466/assets/ai/: showcase.bt
Quimera-Project-feature-initial-engine-research-and-skeleton-15858236916178612466/assets/scenes/: main_scene.yaml
Quimera-Project-feature-initial-engine-research-and-skeleton-15858236916178612466/include/: AIComponent.hpp  AISystem.hpp  AnimationComponent.hpp  AnimationSystem.hpp  AudioComponent.hpp  AudioDecoder.hpp  BGFXRenderer.hpp  CameraComponent.hpp  Compression.hpp  Config.hpp  EditorTools.hpp  Engine.hpp  FileSystem.hpp  FontRenderer.hpp  Framebuffer.hpp  IniParser.hpp  InputSystem.hpp  JobSystem.hpp  Log.hpp  MaterialComponent.hpp  MeshComponent.hpp  MeshOptimizer.hpp  Navigation.hpp  Network.hpp  Particles.hpp  Physics2D.hpp  Physics3DWorld.hpp  ProceduralGen.hpp  Profiling.hpp  RenderBackend.hpp  Renderer.hpp  RigidBody3DComponent.hpp  SceneSerializer.hpp  ScriptComponent.hpp  ScriptingBridge.hpp  Serialization.hpp  Shader.hpp  ShadowMap.hpp  Skybox.hpp  TaskSystem.hpp  (+6 more)
Quimera-Project-feature-initial-engine-research-and-skeleton-15858236916178612466/src/: Audio.cpp  Log.cpp  libs_impl.cpp  libs_impl_c.c  main.cpp  stb_image_impl.cpp
Starlight-Engine-Mark-1-main/_archive_mark1/: Cargo.toml  pyproject.toml  test_forward_plus.py  wasm_build.sh
StarlightEngine/: CMakeLists.txt  LICENSE  README.md  StarlightEngineConfig.cmake  create_project.ps1
StarlightEngine/docs/: ARCHITECTURE.md  ARCHITECTURE.pt-br.md  INDUSTRIAL_SKILLS.md  INDUSTRIAL_SKILLS.pt-br.md  MASTER_MANUAL.md  MASTER_MANUAL.pt-br.md  SDK_MANUAL.md  SDK_MANUAL.pt-br.md
StarlightEngine/include/: AIComponent.hpp  AISystem.hpp  AnimationComponent.hpp  AnimationSystem.hpp  AnimatorComponent.hpp  Arcade25D.hpp  AssetLoader.hpp  BehaviorTree.hpp  CameraSystem.hpp  ClothSystem.hpp  Components.hpp  ComputeShader.hpp  ConsoleSystem.hpp  CoreMinimal.hpp  DashboardSystem.hpp  EditorSystem.hpp  Engine.hpp  EventSystem.hpp  FileSystem.hpp  FileWatcher.hpp  GameSuite.hpp  GizmoSystem.hpp  HierarchySystem.hpp  InputSystem.hpp  InstancedMeshComponent.hpp  JobSystem.hpp  LODComponent.hpp  LODSystem.hpp  Log.hpp  Mesh.hpp  MeshDeformSystem.hpp  NavigationSystem.hpp  NetworkSystem.hpp  Noise.hpp  OctreeSystem.hpp  ParticleSystem.hpp  PhysicsSystem.hpp  PickerSystem.hpp  ReflectionSystem.hpp  RenderGraph.hpp  (+21 more)
StarlightEngine/src/: main.cpp
StarlightEngine/tools/: analyze_image.py  asset_browser.py  forest_editor.py  gen_tree.py  generate_100_skills.py  starlight_studio.py  texture_converter.py  validate_assets.py
TitanEngine/: CMakeLists.txt  README.md  TitanEngineConfig.cmake  build_errors.txt  build_log.txt  build_log_final.txt  build_log_final_2.txt  build_log_final_3.txt  build_log_final_4.txt  build_log_final_5.txt  build_viewport.txt  build_viewport2.txt  build_viewport3.txt  build_warnings.txt  build_warnings_final.txt  directory_audit.csv  imgui.ini  knowledge_audit.csv  total_audit.csv  total_source_audit.csv  void_search.csv
TitanEngine/build2/: CMakeCache.txt
TitanEngine/build3/: CMakeCache.txt
TitanEngine/build4/: CMakeCache.txt
TitanEngine/build5/: CMakeCache.txt
TitanEngine/build_final/: CMakeCache.txt
TitanEngine/build_final_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TitanEditor.vcxproj  TitanEditor.vcxproj.filters  TitanEngine.slnx  TitanSandbox.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters
TitanEngine/build_mega/: CMakeCache.txt
TitanEngine/build_new/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TitanEditor.vcxproj  TitanEditor.vcxproj.filters  TitanEngine.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters
TitanEngine/build_ok/: CMakeCache.txt
TitanEngine/build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TestFetch.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TitanEngine/build_victory/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TitanEngine.slnx  TitanSandbox.vcxproj  TitanSandbox.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters
TitanEngine/docs/: ARCHITECTURE.md  SDK_MANUAL.md  Titan_Industrial_Skills.md  Titan_Master_Manual.md
TitanEngine/include/: AIComponent.hpp  AISystem.hpp  AnimationComponent.hpp  AnimationSystem.hpp  AnimatorComponent.hpp  AssetLoader.hpp  BehaviorTree.hpp  CameraSystem.hpp  ClothSystem.hpp  Components.hpp  ComputeShader.hpp  ConsoleSystem.hpp  CoreMinimal.hpp  DashboardSystem.hpp  EditorSystem.hpp  Engine.hpp  EventSystem.hpp  FileSystem.hpp  FileWatcher.hpp  GameSuite.hpp  GizmoSystem.hpp  HierarchySystem.hpp  InputSystem.hpp  InstancedMeshComponent.hpp  JobSystem.hpp  LODComponent.hpp  LODSystem.hpp  Log.hpp  Mesh.hpp  MeshDeformSystem.hpp  NavigationSystem.hpp  NetworkSystem.hpp  Noise.hpp  OctreeSystem.hpp  ParticleSystem.hpp  PhysicsSystem.hpp  PickerSystem.hpp  ReflectionSystem.hpp  RenderGraph.hpp  Renderer.hpp  (+17 more)
TitanEngine/src/: main.cpp
TitanEngine/test_cmake/: CMakeLists.txt
TitanEngine/tools/: compress_textures.py  generate_voice.ps1
(+1115 files in other folders)
