[workspace]
members = [
    "crates/engine_core",
    "crates/engine_render",
    "crates/engine_launcher",
    "crates/engine_audio",
]
resolver = "2"

[workspace.dependencies]
bevy_ecs = "0.14"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
wgpu = "22.0"
naga = "22.0"
raw-window-handle = "0.6"
glam = { version = "0.29", features = ["bytemuck"] }
rapier3d = "0.22"
winit = "0.30"
rodio = "0.19"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.43", features = ["full"] }
noise = "0.9"
gltf = "1.4"
bytemuck = { version = "1.19", features = ["derive"] }
image = "0.25"
