[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
crate-type = ["cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = [
    "dep:pyo3",
    "dep:rapier3d",
    "dep:engine_audio",
    "dep:gilrs",
    "dep:numpy",
]
wasm = []

[dependencies]
bevy_ecs = { workspace = true }
pyo3 = { workspace = true, optional = true }
wgpu = { workspace = true }
glam = { workspace = true }
rapier3d = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { workspace = true }
noise = { workspace = true }
gltf = { workspace = true }
tobj = { version = "4.0", features = ["async"] }
image = { workspace = true }
crossbeam = "0.8"
rand = { version = "0.8" }
numpy = { version = "0.23", optional = true }
rayon = { version = "1.10" }
bytemuck = { version = "1.14", features = ["derive"] }
engine_render = { path = "../engine_render" }
engine_audio = { path = "../engine_audio", optional = true }
winit = { workspace = true }                                 # Added for run_engine support
gilrs = { version = "0.10", optional = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
zip = "2.1"
tracy-client = "0.16.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
