[package]
name = "engine_render"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { version = "1.19", features = ["derive"] }
tobj = "4.0"
image = "0.25"
half = "2.3"
gltf = "1.4"
anyhow = "1.0"
ddsfile = "0.5.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
